--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-html5-camera-photo": "^1.5.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
@@ -13,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build &&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +31,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://sohyona.github.io"
 }
