--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "cra-template": "1.0.0",
     "react": "^16.12.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-html5-camera-photo": "^1.5.4",
     "react-router-dom": "^5.1.2",
