--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.12.0",
     "react-html5-camera-photo": "^1.5.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-spinners": "^0.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
