Change salad image

--- a/client/package.json
+++ b/client/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://sohyona.github.io"
+  "homepage": "https://sohyona.github.io/barundano-client"
 }
